# GNOME-Builder-Plugins

./: Dockerfile  Dockerfile.ubuntu  INSTALL.md  README.md  check_deps.sh  configure.py  meson.build  meson_options.txt  org.gnome.Builder.Plugin.JCWasmx86Plugins.json  update_deps.sh
.github/workflows/: CI.yml  release.yml
cabal/: cabal.vala  meson.build
callhierarchy/: callhierarchy.vala  meson.build
callhierarchy/data/: callhierarchy.gresource.xml  meson.build
clangd/: clangd.vala  clangd_aux.c  meson.build
data/: cabal.plugin  callhierarchy.plugin  clangd.plugin  gitgui.plugin  gtkcsslanguageserver.plugin  hadolint.plugin  hierarchies.plugin  hls.plugin  icon_installer.plugin  markdown.plugin  meson.build  meson.plugin  mesonlsp.plugin  muon.plugin  proxyls.plugin  pylint.plugin  pyright.plugin  scriptdir.plugin  shellcheck.plugin  shfmt.plugin  sourcekit.plugin  sqlconnections.plugin  sqls.plugin  stack.plugin  swift-format.plugin  swift-lint.plugin  swift-templates.plugin  swift.plugin  texlab.plugin  xmlfmt.plugin
gitgui/: commitview.vala  editorpageaddin.vala  gitgui.vala  meson.build
gitgui/data/: gitgui.gresource.xml  meson.build
gtkcsslanguageserver/: gtkcsslanguageserver.vala  gtkcsslanguageserver_aux.c  meson.build
hadolint/: hadolint.vala  meson.build
hierarchies/: hierarchies.vala  meson.build  wrap.c
hierarchies/data/: hierarchies.gresource.xml  meson.build
hls/: hls.vala  hls_aux.c  meson.build
icon_installer/: icon_installer.vala  meson.build
icon_installer/data/: generate.sh  icon_installer.gresource.xml  icons.json  icons.txt  meson.build
include/: README.md
include/libdex-1/: dex-async-pair.h  dex-async-result.h  dex-block.h  dex-cancellable.h  dex-channel.h  dex-delayed.h  dex-enums.h  dex-error.h  dex-fiber.h  dex-future-set.h  dex-future.h  dex-gio.h  dex-init.h  dex-main-scheduler.h  dex-object.h  dex-platform.h  dex-promise.h  dex-scheduler.h  dex-static-future.h  dex-thread-pool-scheduler.h  dex-timeout.h  dex-unix-signal.h  dex-version-macros.h  dex-version.h  libdex.h
include/libide/: libide-webkit-api.h
include/libide/code/: ide-code-enums.h
include/libide/core/: ide-debug.h  ide-log.h  ide-version.h
include/libide/foundry/: ide-foundry-enums.h
include/libide/gtk/: ide-gtk-enums.h  libide-gtk.h
include/libide/gui/: ide-gui-enums.h
include/libide/io/: ide-io-enums.h
include/libide/lsp/: ide-lsp-configuration-item.h  ide-lsp-enums.h  libide-lsp.h
include/libide/plugins/: ide-plugin.h  libide-plugins.h
include/libide/search/: ide-search-enums.h  libide-search.h
include/libide/sourceview/: ide-source-view-enums.h
include/libide/threading/: libide-threading.h
include/libide/tree/: ide-tree-enums.h
include/libide/vcs/: ide-vcs-enums.h
include/libpanel-1/: libpanel.h  panel-dock-switcher.h  panel-dock.h  panel-enums.h  panel-frame-header-bar.h  panel-frame-header.h  panel-frame-switcher.h  panel-frame-tab-bar.h  panel-frame.h  panel-grid-column.h  panel-grid.h  panel-init.h  panel-omni-bar.h  panel-paned.h  panel-position.h  panel-save-delegate.h  panel-statusbar.h  panel-theme-selector.h  panel-types.h  panel-version-macros.h  panel-version.h  panel-widget.h
include/libpeas/: peas-version.h
include/template-glib-1.0/: tmpl-debug.h  tmpl-enums.h  tmpl-error.h  tmpl-expr-types.h  tmpl-expr.h  tmpl-glib.h  tmpl-scope.h  tmpl-symbol.h  tmpl-template-locator.h  tmpl-template.h  tmpl-version-macros.h  tmpl-version.h
include/vte-2.91/vte/: vtetypebuiltins-gtk4.h  vteversion.h
include/webkitgtk-6.0/jsc/: JSCVersion.h
include/webkitgtk-6.0/webkit/: WebKitApplicationInfo.h  WebKitAuthenticationRequest.h  WebKitAutocleanups.h  WebKitAutomationSession.h  WebKitBackForwardList.h  WebKitBackForwardListItem.h  WebKitColorChooserRequest.h  WebKitConsoleMessage.h  WebKitContextMenu.h  WebKitContextMenuActions.h  WebKitContextMenuItem.h  WebKitCookieManager.h  WebKitCredential.h  WebKitDefines.h  WebKitDeviceInfoPermissionRequest.h  WebKitDownload.h  WebKitEditingCommands.h  WebKitEditorState.h  WebKitEnumTypes.h  WebKitError.h  WebKitFaviconDatabase.h  WebKitFileChooserRequest.h  WebKitFindController.h  WebKitFormSubmissionRequest.h  WebKitFrame.h  WebKitGeolocationManager.h  WebKitGeolocationPermissionRequest.h  WebKitHitTestResult.h  WebKitInputMethodContext.h  WebKitInstallMissingMediaPluginsPermissionRequest.h  WebKitJavascriptResult.h  WebKitMediaKeySystemPermissionRequest.h  WebKitMemoryPressureSettings.h  WebKitMimeInfo.h  WebKitNavigationAction.h  WebKitNavigationPolicyDecision.h  WebKitNetworkProxySettings.h  WebKitNotification.h  WebKitNotificationPermissionRequest.h  WebKitOptionMenu.h  (+44 more)
jdtls/: meson.build
markdown/: markdown.vala  meson.build
meson/: meson.build  meson.vala  meson_aux.c
muon/: meson.build  muon.vala
proxyls/: meson.build  proxyls.vala  proxyls_aux.c
pylint/: meson.build  pylint.vala
pyright/: meson.build  pyright.vala  pyright_aux.c
scriptdir/: meson.build  scriptdir.vala
scriptdir/data/: meson.build  scriptdir.gresource.xml
shellcheck/: meson.build  shellcheck.vala
shfmt/: meson.build  shfmt.vala
sourcekit/: meson.build  sourcekit.vala  sourcekit_aux.c
sqlconnections/: meson.build  sqlconnections.vala
sqls/: meson.build  sqls.vala  sqls_aux.c
stack/: meson.build  stack.vala
swift/: meson.build  swift.vala
swift-format/: meson.build  swift-format.vala
swift-lint/: meson.build  swift-lint.vala
swift-templates/: meson.build  swift-templates.vala
texlab/: meson.build  texlab.vala  texlab_aux.c
vapi/: ide.vapi  libdex.vapi  panel-1.vapi  peas.vapi  template-1.0.vapi  vte-3.91.vapi
xmlfmt/: meson.build  xmlfmt.vala
