option('builder_abi', type: 'string', value: '44', description: 'The ABI to use')
option('plugin_cabal', type: 'feature', value: 'enabled')
option('plugin_clangd', type: 'feature', value: 'enabled')
option('plugin_hls', type: 'feature', value: 'enabled')
option('plugin_icon_installer', type: 'feature', value: 'enabled')
option('plugin_meson', type: 'feature', value: 'enabled')
option('plugin_pylint', type: 'feature', value: 'enabled')
option('plugin_shellcheck', type: 'feature', value: 'enabled')
option('plugin_shfmt', type: 'feature', value: 'enabled')
option('plugin_sqls', type: 'feature', value: 'enabled')
option('plugin_sqlconnections', type: 'feature', value: 'enabled')
option('plugin_stack', type: 'feature', value: 'enabled')
option('plugin_swift', type: 'feature', value: 'enabled')
option('plugin_swift_format', type: 'feature', value: 'enabled')
option('plugin_sourcekit', type: 'feature', value: 'enabled')
option('plugin_texlab', type: 'feature', value: 'enabled')
option('plugin_xmlfmt', type: 'feature', value: 'enabled')