option('builder_abi', type: 'string', value: '44', description: 'The ABI to use')
option('compress', type: 'feature', value: 'enabled', description: 'Whether to compress the plugins using eu-elfcompress')
option('smart', type: 'feature', value: 'disabled', description: 'Autodetect which plugins can be enabled based on available tools')
option('experimental', type: 'boolean', value: false)
option('plugin_cabal', type: 'feature', value: 'enabled')
option('plugin_clangd', type: 'feature', value: 'enabled')
option('plugin_gitgui', type: 'feature', value: 'enabled')
option('plugin_hadolint', type: 'feature', value: 'enabled')
option('plugin_hls', type: 'feature', value: 'enabled')
option('plugin_icon_installer', type: 'feature', value: 'enabled')
option('plugin_markdown', type: 'feature', value: 'enabled')
option('plugin_meson', type: 'feature', value: 'enabled')
option('plugin_muon', type: 'feature', value: 'enabled')
option('plugin_pylint', type: 'feature', value: 'enabled')
option('plugin_shfmt', type: 'feature', value: 'enabled')
option('plugin_sqls', type: 'feature', value: 'enabled')
option('plugin_sqlconnections', type: 'feature', value: 'disabled')
option('plugin_stack', type: 'feature', value: 'enabled')
option('plugin_swift', type: 'feature', value: 'enabled')
option('plugin_swift_format', type: 'feature', value: 'enabled')
option('plugin_swift_lint', type: 'feature', value: 'enabled')
option('plugin_swift_templates', type: 'feature', value: 'enabled')
option('plugin_sourcekit', type: 'feature', value: 'enabled')
option('plugin_texlab', type: 'feature', value: 'enabled')
option('plugin_xmlfmt', type: 'feature', value: 'enabled')
